Fix data grid horizontal overflow

--- a/app/components/Settings/Preview/sql-table.css
+++ b/app/components/Settings/Preview/sql-table.css
@@ -11,6 +11,12 @@
     border-color: #c8d4e3 !important;
 }
 
+/* fix horizontal overflow issues */
+.react-grid-Cell {
+  box-sizing: border-box;
+}
+
+
 .react-grid-Header {
     box-shadow: unset !important;
     max-height: 64px;
