--- a/app/components/Settings/scheduler/scheduler.css
+++ b/app/components/Settings/scheduler/scheduler.css
@@ -38,6 +38,11 @@
     background-color: #f9f9f9;
 }
 
+/* fix horizontal overflow issues */
+.scheduler-table .react-grid-Cell {
+  box-sizing: border-box;
+}
+
 .scheduler-table .react-grid-Row {
     border-top: 1px solid #c8d4e3;
     cursor: pointer;
